--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -7,6 +7,14 @@ footer{
   margin: 10px;
 }
 
+.social-icons{
+  align-self: center;
+}
+
+.contact{
+  align-self: center;
+}
+
 .menu-social-search{
   display: flex;
 }
