--- a/sass/sections/_features.scss
+++ b/sass/sections/_features.scss
@@ -1,18 +1,31 @@
 #features-section{
 
+  margin: 10px;
+  background-color: #4f6aec;
+
   .section-title{
-    color: red;
+    color: white;
   }
 
   .sub-section{
     display: flex;
 
     article{
-      .img-wrapper{
+      display: grid;
+      margin: 10px;
+      border-radius: 2px solid #4f6aec;
+      border-radius: 80px;
+      border: 4px solid white;
+      grid-template-rows: 1fr 40px auto;
+      background-color: white;
 
+      .icon-book{
+        text-align: center;
       }
 
     }
+
+    
   }
 
 
