--- a/style.css
+++ b/style.css
@@ -48,11 +48,27 @@ ul li {
   margin: 0;
 }
 
+#features-section {
+  margin: 10px;
+  background-color: #4f6aec;
+}
 #features-section .section-title {
-  color: red;
+  color: white;
 }
 #features-section .sub-section {
   display: flex;
+}
+#features-section .sub-section article {
+  display: grid;
+  margin: 10px;
+  border-radius: 2px solid #4f6aec;
+  border-radius: 80px;
+  border: 4px solid white;
+  grid-template-rows: 1fr 40px auto;
+  background-color: white;
+}
+#features-section .sub-section article .icon-book {
+  text-align: center;
 }
 #features-section .team-members {
   display: grid;
@@ -77,9 +93,28 @@ ul li {
   border-radius: 30%;
 }
 
-.footer {
+.shop-section .sub-section {
+  display: flex;
+}
+.shop-section .sub-section article {
+  margin: 10px;
+}
+
+footer {
   display: flex;
   justify-content: space-between;
+}
+
+.footer {
+  margin: 10px;
+}
+
+.social-icons {
+  align-self: center;
+}
+
+.contact {
+  align-self: center;
 }
 
 .menu-social-search {
