--- a/sass/sections/_features.scss
+++ b/sass/sections/_features.scss
@@ -19,13 +19,13 @@
       grid-template-rows: 1fr 40px auto;
       background-color: white;
 
-      .icon-book{
+      .icons{
         text-align: center;
       }
 
     }
 
-    
+
   }
 
 
