--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ ul li {
   grid-template-rows: 1fr 40px auto;
   background-color: white;
 }
-#features-section .sub-section article .icon-book {
+#features-section .sub-section article .icons {
   text-align: center;
 }
 #features-section .team-members {
