--- a/style.css
+++ b/style.css
@@ -94,10 +94,19 @@ ul li {
 }
 
 .shop-section .sub-section {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .shop-section .sub-section article {
   margin: 10px;
+}
+
+.video-section {
+  margin: 10px;
+}
+.video-section .sub-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 footer {
