--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -1,14 +1,23 @@
 
-
-.footer{
-  display: flex;
-  justify-content: space-between;
-  margin: 10px;
-}
-
 footer{
   border-top: 4px solid #4f6aec;
+
+  .footer{
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+
+  }
+
+  .social-icons{
+    align-self: center;
+    margin: 10px;
+  }
+
 }
+
+
+
 
 .social-icons{
   align-self: center;
