--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -22,10 +22,6 @@ footer{
 
 }
 
-
-
-
-
 .contact{
   align-self: center;
 }
@@ -40,5 +36,9 @@ footer{
 
 .menu-social-search li a{
   text-decoration: none;
+}
+
+.f-copy{
+  text-align: center;
 }
 
