--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -22,9 +22,7 @@ footer{
 
 }
 
-.contact{
-  align-self: center;
-}
+
 
 .menu-social-search{
   display: flex;
@@ -42,3 +40,7 @@ footer{
   text-align: center;
 }
 
+//CONTACT GRID
+.contact{
+  align-self: center;
+}
