--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -46,7 +46,13 @@ footer{
 
   .contact-header{
     font-size: 2rem;
+    color: #4f6aec;
   }
 
-
 }
+
+.open{
+  font-size: 2rem;
+  color: #4f6aec;
+}
+
