--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ footer .social-icons .menu-social-search {
 .f-copy {
   text-align: center;
   color: #4f6aec;
+  font-size: 1.2rem;
 }
 
 #contact {
