--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -25,7 +25,8 @@ ul li{
 ul li a{
   text-decoration: none;
   padding: 6px;
-  font-size: 1.2rem
+  font-size: 1.2rem;
+  color:#4f6aec;
   /* padding-bottom: 0; */
 }
 
