--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 header {
   display: flex;
+  border-bottom: 3px solid #4f6aec;
 }
 
 .site-title {
@@ -25,6 +26,8 @@ ul li a {
   text-decoration: none;
   padding: 6px;
   font-size: 1.2rem;
+  color: #4f6aec;
+  /* padding-bottom: 0; */
 }
 
 body {
