--- a/sass/sections/_doctor.scss
+++ b/sass/sections/_doctor.scss
@@ -4,6 +4,10 @@
   background-color:#4f6aec;
   margin: 10px;
 
+  .section-title{
+    color: #4f6aec;
+    font-size: 2rem;
+  }
   .sub-section{
     display: grid;
     grid-template-columns: 1fr 1fr;
