--- a/sass/sections/_doctor.scss
+++ b/sass/sections/_doctor.scss
@@ -1,15 +1,16 @@
-
-
 #doctors-section{
   background-color:#4f6aec;
   margin: 10px;
 
   .section-title{
-    color: #4f6aec;
+    color: white;
     font-size: 2rem;
+    margin: 8px;
   }
+
   .sub-section{
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+
 }
