--- a/sass/sections/_video.scss
+++ b/sass/sections/_video.scss
@@ -1,6 +1,11 @@
 #video-section{
   margin: 10px;
 
+  .site-title{
+    color: #4f6aec;
+    font-size: 2rem;
+  }
+
   .sub-section{
     display: grid;
     grid-template-columns: 1fr 1fr;
