--- a/sass/sections/_doctor.scss
+++ b/sass/sections/_doctor.scss
@@ -11,6 +11,16 @@
   .sub-section{
     display: grid;
     grid-template-columns: 1fr 1fr;
+
+    article .text-doc{
+      color: white;
+      text-align: center;
+      margin: 10px;
+    }
   }
 
+}
+
+article .text-doc h4{
+  font-size: 1.5rem;
 }
