--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -8,7 +8,10 @@ header{
   color: #4f6aec;
   font-size: 4rem;
   margin: 0;
+  margin-left: 10px;
+  margin-top: 10px;
 }
+
 
 .menu-wrapper ul{
   display: flex;
