--- a/sass/sections/_features.scss
+++ b/sass/sections/_features.scss
@@ -5,6 +5,8 @@
 
   .section-title{
     color: white;
+    font-size: 1.5rem;
+    margin: 10px;
   }
 
   .sub-section{
@@ -21,6 +23,10 @@
 
       .icons{
         text-align: center;
+
+        .icon-wrap{
+          margin-top: 20px;
+        }
       }
 
     }
