--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -3,11 +3,11 @@ header{
   border-bottom: 3px solid #4f6aec
 }
 
-.site-title{
+header h1{
   flex-grow: 1;
   color: #4f6aec;
   font-size: 4rem;
-  margin: 0;
+  //margin: 0;
   margin-left: 10px;
   margin-top: 10px;
 }
