--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ footer .social-icons .menu-social-search {
   justify-content: center;
 }
 
-.map h1 {
+.Map h1 {
   color: #4f6aec;
   font-size: 2.2rem;
 }
