--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -7,9 +7,7 @@ header h1{
   flex-grow: 1;
   color: #4f6aec;
   font-size: 4rem;
-  //margin: 0;
-  margin-left: 10px;
-  margin-top: 10px;
+    margin: 8px;
 }
 
 
