--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ header h1 {
   flex-grow: 1;
   color: #4f6aec;
   font-size: 4rem;
-  margin-left: 10px;
-  margin-top: 10px;
+  margin: 8px;
 }
 
 .menu-wrapper ul {
