--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ ul li a {
   /* padding-bottom: 0; */
 }
 
+ul li a:hover {
+  background-color: #4f6aec;
+  color: white;
+}
+
 body {
   margin: 0;
   padding: 0;
