--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -38,5 +38,13 @@ ul li a:hover{
   color: white;
 }
 
+a[href="https://facebook.com"]::before{
+  font-family: "Font Awesome 5 Brands"; content: "\f082";
+  color:orangered;
+  //font-style: 1rem;
+  font-size: 3rem;
+
+}
+
 
 
