--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 header {
   display: flex;
   border-bottom: 3px solid #4f6aec;
@@ -35,13 +34,6 @@ ul li a {
 ul li a:hover {
   background-color: #4f6aec;
   color: white;
-}
-
-a[href="https://facebook.com"]::before {
-  font-family: "Font Awesome 5 Brands";
-  content: "";
-  color: orangered;
-  font-size: 3rem;
 }
 
 body {
@@ -249,6 +241,18 @@ footer .social-icons .menu-social-search {
 .header-hour {
   font-size: 2rem;
   color: #4f6aec;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap;
+  /* added line */
 }
 
 /*# sourceMappingURL=style.css.map */
