--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -39,6 +39,7 @@ footer{
 
 .menu-social-search li a{
   text-decoration: none;
+  font-size: 3rem;
 }
 
 .f-copy{
@@ -73,12 +74,12 @@ footer{
   clip: rect(1px, 1px, 1px, 1px);
   white-space: nowrap; /* added line */
 }
-
-a[href="https://facebook.com"]::before{
-  font-family: "Font Awesome 5 Brands";
-  content: "\f082";
-  color:orangered;
-  //font-style: 1rem;
-  font-size: 3rem;
-
-}
+//
+//a[href="https://facebook.com"]::before{
+//  font-family: "Font Awesome 5 Brands";
+//  content: "\f082";
+//  color:orangered;
+//  //font-style: 1rem;
+//  font-size: 3rem;
+//
+//}
