--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ footer .social-icons .menu-social-search {
 
 .menu-social-search li a {
   text-decoration: none;
+  font-size: 3rem;
 }
 
 .f-copy {
