--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -42,6 +42,12 @@ footer{
   font-size: 3rem;
 }
 
+.menu-social-search li :hover a{
+  background-color: white;
+  color: #4f6aec;
+  transition: all .5s ease ;
+}
+
 .f-copy{
   text-align: center;
   color: #4f6aec;
