--- a/style.css
+++ b/style.css
@@ -225,6 +225,12 @@ footer .social-icons .menu-social-search {
   font-size: 3rem;
 }
 
+.menu-social-search li :hover a {
+  background-color: white;
+  color: #4f6aec;
+  transition: all 0.5s ease;
+}
+
 .f-copy {
   text-align: center;
   color: #4f6aec;
