--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -38,14 +38,15 @@ footer{
 }
 
 .menu-social-search li a{
-  text-decoration: none;
-  font-size: 3rem;
+  background-color: white;
+  color: #4f6aec;
+  transition: all .5ms ease ;
 }
 
 .menu-social-search li :hover a{
-  background-color: white;
-  color: #4f6aec;
-  transition: all .5s ease ;
+
+  text-decoration: none;
+  font-size: 3rem;
 }
 
 .f-copy{
