--- a/style.css
+++ b/style.css
@@ -221,14 +221,14 @@ footer .social-icons .menu-social-search {
 }
 
 .menu-social-search li a {
-  text-decoration: none;
-  font-size: 3rem;
+  background-color: white;
+  color: #4f6aec;
+  transition: all 0.5ms ease;
 }
 
 .menu-social-search li :hover a {
-  background-color: white;
-  color: #4f6aec;
-  transition: all 0.5s ease;
+  text-decoration: none;
+  font-size: 3rem;
 }
 
 .f-copy {
