--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -40,11 +40,10 @@ footer{
 .menu-social-search li a{
   background-color: white;
   color: #4f6aec;
-  transition: all .5ms ease ;
+  transition: all .5s ease ;
 }
 
-.menu-social-search li :hover a{
-
+.menu-social-search li:hover a{
   text-decoration: none;
   font-size: 3rem;
 }
