--- a/style.css
+++ b/style.css
@@ -223,10 +223,10 @@ footer .social-icons .menu-social-search {
 .menu-social-search li a {
   background-color: white;
   color: #4f6aec;
-  transition: all 0.5ms ease;
+  transition: all 0.5s ease-in;
 }
 
-.menu-social-search li :hover a {
+.menu-social-search li a:hover {
   text-decoration: none;
   font-size: 3rem;
 }
