--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -31,9 +31,10 @@ ul li{
   font-size: 1.2rem;
   color:#4f6aec;
   /* padding-bottom: 0; */
+  transition: all .5s ease-out;
 }
 
-ul li a:hover{
+.menu-main li a:hover{
   background-color: #4f6aec;
   color: white;
 }
