--- a/style.css
+++ b/style.css
@@ -23,15 +23,16 @@ ul li {
   list-style: none;
 }
 
-ul li a {
+.menu-main li a {
   text-decoration: none;
   padding: 6px;
   font-size: 1.2rem;
   color: #4f6aec;
   /* padding-bottom: 0; */
+  transition: all 0.5s ease-out;
 }
 
-ul li a:hover {
+.menu-main li a:hover {
   background-color: #4f6aec;
   color: white;
 }
