--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -40,12 +40,12 @@ footer{
 .menu-social-search li a{
   background-color: white;
   color: #4f6aec;
-  transition: all .5s ease-in ;
+  transition: all .5ms ease-in ;
 }
 
 .menu-social-search li a:hover{
   text-decoration: none;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .f-copy{
