--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -31,7 +31,7 @@ ul li{
   font-size: 1.2rem;
   color:#4f6aec;
   /* padding-bottom: 0; */
-  transition: all .5s ease-out;
+  transition: all .5ms ease-out;
 }
 
 .menu-main li a:hover{
