--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -40,6 +40,8 @@ footer{
 .menu-social-search li a{
   background-color: white;
   color: #4f6aec;
+  padding: 6px;
+  font-size: 1.2rem;
   transition: all .5ms ease-in ;
 }
 
