--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -37,17 +37,20 @@ footer{
   align-self: center;
 }
 
+
+
 .menu-social-search li a{
   background-color: white;
   color: #4f6aec;
   padding: 6px;
   font-size: 1.2rem;
-  transition: all .5ms ease-in ;
+  transition: all .5s ease-in ;
 }
 
 .menu-social-search li a:hover{
   text-decoration: none;
   font-size: 2.5rem;
+
 }
 
 .f-copy{
