--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ ul li {
   font-size: 1.2rem;
   color: #4f6aec;
   /* padding-bottom: 0; */
-  transition: all 0.5ms ease-out;
+  transition: all 0.5ms ease;
 }
 
 .menu-main li a:hover {
@@ -226,7 +226,7 @@ footer .social-icons .menu-social-search {
   color: #4f6aec;
   padding: 6px;
   font-size: 1.2rem;
-  transition: all 0.5ms ease-in;
+  transition: all 0.5s ease-in;
 }
 
 .menu-social-search li a:hover {
