--- a/style.css
+++ b/style.css
@@ -226,12 +226,14 @@ footer .social-icons .menu-social-search {
   color: #4f6aec;
   padding: 6px;
   font-size: 1.2rem;
-  transition: all 0.5s ease-in;
+  transition: all 0.5ms ease-in;
 }
 
 .menu-social-search li a:hover {
   text-decoration: none;
   font-size: 2.5rem;
+  color: white;
+  background-color: #4f6aec;
 }
 
 .f-copy {
