--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -50,8 +50,8 @@ footer{
 .menu-social-search li a:hover{
   text-decoration: none;
   font-size: 2.5rem;
-  color: white;
-  background-color: #4f6aec;
+  //color: white;
+  //background-color: #4f6aec;
 
 }
 
