--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -44,7 +44,7 @@ footer{
   color: #4f6aec;
   padding: 6px;
   font-size: 1.2rem;
-  transition: all .5ms ease-in ;
+  transition: all .5s ease-in ;
 }
 
 .menu-social-search li a:hover{
