--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ footer .social-icons .menu-social-search {
   color: #4f6aec;
   padding: 6px;
   font-size: 1.2rem;
-  transition: all 0.5ms ease-in;
+  transition: all 0.5s ease-in;
 }
 
 .menu-social-search li a:hover {
