--- a/style.css
+++ b/style.css
@@ -26,15 +26,16 @@ ul li {
 .menu-main li a {
   text-decoration: none;
   padding: 6px;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: #4f6aec;
   /* padding-bottom: 0; */
-  transition: all 0.5ms ease-in;
+  transition: all 0.5s ease-in;
 }
 
 .menu-main li a:hover {
   background-color: #4f6aec;
   color: white;
+  font-size: 1.2rem;
 }
 
 body {
@@ -225,7 +226,7 @@ footer .social-icons .menu-social-search {
   background-color: white;
   color: #4f6aec;
   padding: 6px;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   transition: all 0.5s ease-in;
 }
 
