--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ footer .social-icons .menu-social-search {
   color: #4f6aec;
   padding: 6px;
   font-size: 1.5rem;
-  transition: all 0.5s ease-in;
+  transition: all 0.5s ease-out;
 }
 
 .menu-social-search li a:hover {
