--- a/sass/sections/_doctor.scss
+++ b/sass/sections/_doctor.scss
@@ -1,11 +1,11 @@
 #doctors-section{
   background-color:#4f6aec;
-  margin: 10px;
+  padding: 10px;
 
   .section-title{
     color: white;
     font-size: 2rem;
-    margin: 8px;
+
   }
 
   .sub-section{
