--- a/sass/sections/_features.scss
+++ b/sass/sections/_features.scss
@@ -14,17 +14,19 @@
 
     article{
       display: grid;
-      margin: 10px;
-      border-radius: 80px;
+      padding: 35px 40px;
+      border-radius: 20px;
       border: 4px solid white;
-      grid-template-rows: 1fr 40px auto;
+      //grid-template-rows: 1fr 40px auto;
       background-color: white;
 
       .icons{
         text-align: center;
 
         .icon-wrap{
-          margin-top: 20px;
+          //margin-top: 20px;
+          width: 60%;
+          margin: auto;
         }
       }
 
