--- a/sass/sections/_members.scss
+++ b/sass/sections/_members.scss
@@ -20,6 +20,15 @@
   }
 }
 
+.team-wrapper{
+  padding: 30px 30px 0px 30px;
+
+  img{
+    border-radius: 50%;
+    border: 15px solid white;
+  }
+}
+
 
 
 .text-team p{
