--- a/style.css
+++ b/style.css
@@ -194,6 +194,14 @@ article .text-doc h4 {
   text-align: center;
 }
 
+.team-wrapper {
+  padding: 30px 30px 0px 30px;
+}
+.team-wrapper img {
+  border-radius: 50%;
+  border: 15px solid white;
+}
+
 .text-team p {
   font-size: 1.5rem;
 }
