--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -1,48 +1,48 @@
-//header{
-//  display: flex;
-//  border-bottom: 3px solid #4f6aec
-//}
-//
-//header h1{
-//  flex-grow: 1;
-//  color: #4f6aec;
-//  font-size: 4rem;
-//    margin: 8px;
-//}
-//
-//header h1{
-//  font-family: 'Poppins', sans-serif;
-//}
-//
-//
-//.menu-wrapper ul{
-//  display: flex;
-//}
-//
-//.menu-wrapper{
-//  align-self: center;
-//  margin-right: 10px;
-//}
-//
-//
-//ul li{
-//  list-style: none;
-//}
-//
-//.menu-main li a{
-//  text-decoration: none;
-//  padding: 6px;
-//  font-size: 1.1rem;
-//  color:#4f6aec;
-//  /* padding-bottom: 0; */
-//  transition: all .5s ease-in;
-//}
-//
-//.menu-main li a:hover{
-//  background-color: #4f6aec;
-//  color: white;
-//  font-size: 1.2rem;
-//}
+header{
+  display: flex;
+  border-bottom: 3px solid #4f6aec
+}
+
+header h1{
+  flex-grow: 1;
+  color: #4f6aec;
+  font-size: 4rem;
+    margin: 8px;
+}
+
+header h1{
+  font-family: 'Poppins', sans-serif;
+}
+
+
+.menu-wrapper ul{
+  display: flex;
+}
+
+.menu-wrapper{
+  align-self: center;
+  margin-right: 10px;
+}
+
+
+ul li{
+  list-style: none;
+}
+
+.menu-main li a{
+  text-decoration: none;
+  padding: 6px;
+  font-size: 1.1rem;
+  color:#4f6aec;
+  /* padding-bottom: 0; */
+  transition: all .5s ease-in;
+}
+
+.menu-main li a:hover{
+  background-color: #4f6aec;
+  color: white;
+  font-size: 1.2rem;
+}
 
 
 
