--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
+header {
+  display: flex;
+  border-bottom: 3px solid #4f6aec;
+}
+
+header h1 {
+  flex-grow: 1;
+  color: #4f6aec;
+  font-size: 4rem;
+  margin: 8px;
+}
+
+header h1 {
+  font-family: "Poppins", sans-serif;
+}
+
+.menu-wrapper ul {
+  display: flex;
+}
+
+.menu-wrapper {
+  align-self: center;
+  margin-right: 10px;
+}
+
+ul li {
+  list-style: none;
+}
+
+.menu-main li a {
+  text-decoration: none;
+  padding: 6px;
+  font-size: 1.1rem;
+  color: #4f6aec;
+  /* padding-bottom: 0; */
+  transition: all 0.5s ease-in;
+}
+
+.menu-main li a:hover {
+  background-color: #4f6aec;
+  color: white;
+  font-size: 1.2rem;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -151,7 +195,7 @@ article .text-doc h4 {
 }
 
 .team-wrapper {
-  padding: 45px 45px 0px 45px;
+  padding: 70px 70px 0px 70px;
 }
 .team-wrapper img {
   border-radius: 50%;
