--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -1,7 +1,7 @@
 
 footer{
   border-top: 4px solid #4f6aec;
-  padding: 10px;
+  padding: 30px;
 
   .footer{
     display: grid;
@@ -9,6 +9,24 @@ footer{
     grid-gap: 0.8rem;
     padding-top: 2rem;
     margin: auto;
+
+    .ftitle{
+
+      padding: 50px;
+      text-align: center;
+       h1{
+         margin: 0;
+         color: #4f6aec;
+       }
+      .logo-wrap{
+        padding: 50px 50px 0px 50px;
+
+          img{
+            width: 50%;
+          }
+      }
+
+    }
   }
 
   .social-icons{
@@ -21,6 +39,10 @@ footer{
     }
   }
 
+}
+
+.social-icons{
+   padding: 30px 30px 0px 30px;
 }
 
 .Map h1{
@@ -42,7 +64,7 @@ footer{
 .menu-social-search li a{
   background-color: white;
   color: #4f6aec;
-  padding: 6px;
+  padding: 12px;
   font-size: 1.5rem;
   transition: all .5s ease-out;
 }
@@ -87,12 +109,4 @@ footer{
   clip: rect(1px, 1px, 1px, 1px);
   white-space: nowrap; /* added line */
 }
-//
-//a[href="https://facebook.com"]::before{
-//  font-family: "Font Awesome 5 Brands";
-//  content: "\f082";
-//  color:orangered;
-//  //font-style: 1rem;
-//  font-size: 3rem;
-//
-//}
+
