--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
 header {
   display: flex;
   border-bottom: 3px solid #4f6aec;
+  padding: 15px 15px 0px 15px;
 }
-
 header h1 {
   flex-grow: 1;
   color: #4f6aec;
-  font-size: 4rem;
-  margin: 8px;
-}
-
-header h1 {
+  font-size: 2rem;
+  margin: 0;
+  align-self: center;
   font-family: "Poppins", sans-serif;
 }
 
@@ -22,14 +20,18 @@ header h1 {
   align-self: center;
   margin-right: 10px;
 }
+.menu-wrapper ul {
+  margin-bottom: 0;
+}
 
 ul li {
   list-style: none;
+  margin: 0;
 }
 
 .menu-main li a {
   text-decoration: none;
-  padding: 6px;
+  padding: 15px;
   font-size: 1.1rem;
   color: #4f6aec;
   /* padding-bottom: 0; */
@@ -39,7 +41,6 @@ ul li {
 .menu-main li a:hover {
   background-color: #4f6aec;
   color: white;
-  font-size: 1.2rem;
 }
 
 body {
