--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -1,17 +1,16 @@
-header{
+header {
   display: flex;
-  border-bottom: 3px solid #4f6aec
-}
+  border-bottom: 3px solid #4f6aec;
+  padding: 15px 15px 0px 15px;
 
-header h1{
-  flex-grow: 1;
-  color: #4f6aec;
-  font-size: 4rem;
-    margin: 8px;
-}
-
-header h1{
-  font-family: 'Poppins', sans-serif;
+   h1 {
+    flex-grow: 1;
+    color: #4f6aec;
+    font-size: 2rem;
+    margin: 0;
+    align-self: center;
+    font-family: 'Poppins', sans-serif;
+  }
 }
 
 
@@ -22,16 +21,21 @@ header h1{
 .menu-wrapper{
   align-self: center;
   margin-right: 10px;
+
+  ul{
+    margin-bottom: 0;
+  }
 }
 
 
 ul li{
   list-style: none;
+  margin: 0;
 }
 
 .menu-main li a{
   text-decoration: none;
-  padding: 6px;
+  padding: 15px;
   font-size: 1.1rem;
   color:#4f6aec;
   /* padding-bottom: 0; */
@@ -41,7 +45,7 @@ ul li{
 .menu-main li a:hover{
   background-color: #4f6aec;
   color: white;
-  font-size: 1.2rem;
+  //font-size: 1.2rem;
 }
 
 
