--- a/sass/sections/_shop.scss
+++ b/sass/sections/_shop.scss
@@ -1,4 +1,5 @@
 #shop-section{
+    padding: 10px;
 
   .section-title{
     margin: 10px;
@@ -8,9 +9,48 @@
 
   .sub-section{
     display: flex;
+    padding: 30px;
 
     article{
-      margin: 10px;
+      display: inline-block;
+      margin: 0 11px 0 0;
+      box-sizing: border-box;
+      border: 1px solid #dadce0;
+      border-radius: 8px;
+      box-shadow: none;
+      line-height: 15px;
+      overflow: hidden;
+      vertical-align: top;
+      height: 100%;
+
+        .shop-wrap{
+          padding: 20px;
+        }
+
+
+      .text-brand{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 20px;
+      }
     }
   }
 }
+
+.model-no p{
+  margin: 0;
+}
+
+
+  .pbtn{
+    text-align: end;
+
+    .btn-shop {
+      color: white;
+      padding: 5px;
+      background-color: #4f6aec;
+      width: 40%;
+      border-radius: 28px;
+    }
+
+  }
