--- a/style.css
+++ b/style.css
@@ -258,6 +258,11 @@ article .text-doc h4 {
   font-size: 1.5rem;
 }
 
+.team-wrapper img:hover {
+  transform: scale(1.3);
+  transition: all 0.5s;
+}
+
 footer {
   border-top: 4px solid #4f6aec;
   padding: 30px;
