--- a/sass/sections/_shop.scss
+++ b/sass/sections/_shop.scss
@@ -58,3 +58,10 @@
     }
 
   }
+
+.shop-wrap img:hover{
+    //transition: transform 400ms ease-in-out;
+
+  transform: scale(1.1);
+  transition: transform 0.5s cubic-bezier(0.55, 0.06,  0.68, 0.19);
+  }
