--- a/style.css
+++ b/style.css
@@ -190,6 +190,11 @@ article {
   border-radius: 28px;
 }
 
+.shop-wrap img:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s cubic-bezier(0.55, 0.06, 0.68, 0.19);
+}
+
 #video-section {
   padding: 10px;
 }
