--- a/sass/sections/_video.scss
+++ b/sass/sections/_video.scss
@@ -10,4 +10,21 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+
+
+}
+
+.sub-section article:nth-of-type(2){
+  display: grid;
+  grid-template-rows: 1fr ;
+}
+
+article .dwn-wrap{
+     display: flex;
+  justify-content: center;
+  padding-bottom: 40px;
+
+   img{
+     max-width: 40%;
+   }
 }
